VIS/app/deploy/DEV/deploy/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: cicd-vis-core-frontend
  name: cicd-vis-core-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cicd-vis-core-frontend
    deploymentconfig: cicd-vis-core-frontend
  sessionAffinity: None
  type: ClusterIP
